# hashers

./: Cargo.toml  README.md
.github/workflows/: CI.yml
hashers/: __init__.py
src/: lib.rs
