[package]
name = "hashers"
version = "0.2.1"
authors = ["unrahul <rahulunair@gmail.com>"]
edition = "2018"
description = "Password hashing library in Python using Rust backend "
readme = "README.md"
documentation = "https://github.com/rahulunair/hashers/README.md"
license = "BSD-3-Clause"
keywords = ["uuid", "hash", "password"]

[lib]
name = "hashers"
crate-type = ["cdylib"]


[dependencies]
djangohashers = "1.4.0"
pyo3 = { version = "0.13.2", features = ["extension-module"] }
